--- a/SiestaRobot/language/en.yaml
+++ b/SiestaRobot/language/en.yaml
@@ -19,6 +19,9 @@ pm_start_text: |
 
   ➢ Try The Help Buttons Below To See The Commands Available After My Element Buff ××
    
+pm_start_pic: |
+  "https://te.legra.ph/file/9abdbb8e7fa75e03a91ea.jpg"
+   
 group_start_text: |
   やあ Kon'nichiwa Minna-San, Am Kaguya Shinomiya and I'll protect you from everything [✿](https://telegra.ph/file/271e1ef391ad4036e7a4b.mp4)
   
@@ -135,13 +138,13 @@ anime_help: |
       /anime <anime>: returns information about the anime.
       /whatanime: returns source of anime when replied to photo or gif.                                                          
       /character <character>: returns information about the character.
-    ♡ /manga <manga>: returns information about the manga.
-    ♡ /user <user>: returns information about a MyAnimeList user.
-    ♡ /upcoming: returns a list of new anime in the upcoming seasons.
-    ♡ /airing <anime>: returns anime airing info.
-    ♡ /whatanime <anime>: reply to gif or photo.
-    ♡ /kaizoku <anime>: search an anime on animekaizoku.com
-    ♡ /kayo <anime>: search an anime on animekayo.com
+      /manga <manga>: returns information about the manga.
+      /user <user>: returns information about a MyAnimeList user.
+      /upcoming: returns a list of new anime in the upcoming seasons.
+      /airing <anime>: returns anime airing info.
+      /whatanime <anime>: reply to gif or photo.
+      /kaizoku <anime>: search an anime on animekaizoku.com
+      /kayo <anime>: search an anime on animekayo.com
 
     ──「 Anime Quotes 」──
 
@@ -157,21 +160,21 @@ antichannel_help: |
     Anti Channel Mode is a mode to automatically ban users who chat using Channels. 
     This command can only be used by *Admins*.
 
-    ♡ /antichannelmode <'on'/'yes'> *:* enables anti-channel-mode
-    ♡ /antichannelmode <'off'/'no'> *:* disabled anti-channel-mode
+      /antichannelmode <'on'/'yes'> *:* enables anti-channel-mode
+      /antichannelmode <'off'/'no'> *:* disabled anti-channel-mode
 antiflood_help: |
     ──「 Anti-Flood 」──
 
     Antiflood allows you to take action on users that send more than x messages in a row. Exceeding the set flood \
     will result in restricting that user.
     This will mute users if they send more than 10 messages in a row, bots are ignored.
-    ♡ `/flood`*:* Get the current flood control setting
+      `/flood`*:* Get the current flood control setting
 
     *Admins only:*
 
-    ♡ `/setflood <int/'no'/'off'>`*:* enables or disables flood control
+      `/setflood <int/'no'/'off'>`*:* enables or disables flood control
     *Example:* `/setflood 10`
-    ♡ `/setfloodmode <ban/kick/mute/tban/tmute> <value>`*:* Action to perform when user have exceeded flood limit. ban/kick/mute/tmute/tban
+      `/setfloodmode <ban/kick/mute/tban/tmute> <value>`*:* Action to perform when user have exceeded flood limit. ban/kick/mute/tmute/tban
 
     *Note:*
     Value must be filled for tban and tmute!!
@@ -184,7 +187,7 @@ antispam_help: |
     ──「 Anti-Spam 」──
 
     *Admins only:*
-    ♡ `/antispam <on/off/yes/no>`*:* Will toggle our antispam tech or return your current settings.
+      `/antispam <on/off/yes/no>`*:* Will toggle our antispam tech or return your current settings.
 
     Anti-Spam, used by bot devs to ban spammers across all groups. This helps protect \
     you and your groups by removing spam flooders as quickly as possible.
@@ -204,31 +207,31 @@ approve_help: |
     That's what approvals are for - approve of trustworthy users to allow them to send
 
     *Admin commands:*
-    ♡ /approval*:* Check a user's approval status in this chat.
-    ♡ /approve*:* Approve of a user. Locks, blacklists, and antiflood won't apply to them anymore.
-    ♡ /unapprove*:* Unapprove of a user. They will now be subject to locks, blacklists, and antiflood again.
-    ♡ /approved*:* List all approved users.
-    ♡ /unapproveall*:* Unapprove *ALL* users in a chat. This cannot be undone.
+      /approval*:* Check a user's approval status in this chat.
+      /approve*:* Approve of a user. Locks, blacklists, and antiflood won't apply to them anymore.
+      /unapprove*:* Unapprove of a user. They will now be subject to locks, blacklists, and antiflood again.
+      /approved*:* List all approved users.
+      /unapproveall*:* Unapprove *ALL* users in a chat. This cannot be undone.
 bansmutes_help: |
     ──「 Bans / Mutes 」──
 
     *User Commands:*
 
-    ♡ /kickme*:* kicks the user who issued the command
+      /kickme*:* kicks the user who issued the command
 
     *Admins only:*
 
-    ♡ /ban <userhandle>*:* bans a user. (via handle, or reply)
-    ♡ /sban <userhandle>*:* Silently ban a user. Deletes command, Replied message and doesn't reply. (via handle, or reply)
-    ♡ /tban <userhandle> x(m/h/d)*:* bans a user for x time. (via handle, or reply). m = minutes, h = hours, d = days.
-    ♡ /unban <userhandle>*:* unbans a user. (via handle, or reply)
-    ♡ /kick <userhandle>*:* kicks a user out of the group, (via handle, or reply)
-    ♡ /mute <userhandle>*:* silences a user. Can also be used as a reply, muting the replied to user.
-    ♡ /tmute <userhandle> x(m/h/d)*:* mutes a user for x time. (via handle, or reply). m = minutes, h = hours, d = days.
-    ♡ /unmute <userhandle>*:* unmutes a user. Can also be used as a reply, muting the replied to user.
-    ♡ /zombies*:* searches deleted accounts
-    ♡ /zombies clean*:* removes deleted accounts from the group.
-    ♡ /snipe <chatid> <string>*:* Make me send a message to a specific chat.
+      /ban <userhandle>*:* bans a user. (via handle, or reply)
+      /sban <userhandle>*:* Silently ban a user. Deletes command, Replied message and doesn't reply. (via handle, or reply)
+      /tban <userhandle> x(m/h/d)*:* bans a user for x time. (via handle, or reply). m = minutes, h = hours, d = days.
+      /unban <userhandle>*:* unbans a user. (via handle, or reply)
+      /kick <userhandle>*:* kicks a user out of the group, (via handle, or reply)
+      /mute <userhandle>*:* silences a user. Can also be used as a reply, muting the replied to user.
+      /tmute <userhandle> x(m/h/d)*:* mutes a user for x time. (via handle, or reply). m = minutes, h = hours, d = days.
+      /unmute <userhandle>*:* unmutes a user. Can also be used as a reply, muting the replied to user.
+      /zombies*:* searches deleted accounts
+      /zombies clean*:* removes deleted accounts from the group.
+      /snipe <chatid> <string>*:* Make me send a message to a specific chat.
 blacklist_help: |
     ──「 Blacklist 」──
 
@@ -236,70 +239,70 @@ blacklist_help: |
 
     *NOTE*: Blacklists do not affect group admins.
 
-    ♡ /blacklist*:* View the current blacklisted words.
+      /blacklist*:* View the current blacklisted words.
 
     Admin only:
-    ♡ /addblacklist <triggers>*:* Add a trigger to the blacklist. Each line is considered one trigger, so using different lines will allow you to add multiple triggers.
-    ♡ /unblacklist <triggers>*:* Remove triggers from the blacklist. Same newline logic applies here, so you can remove multiple triggers at once.
-    ♡ /blacklistmode <off/del/warn/ban/kick/mute/tban/tmute>*:* Action to perform when someone sends blacklisted words.
+      /addblacklist <triggers>*:* Add a trigger to the blacklist. Each line is considered one trigger, so using different lines will allow you to add multiple triggers.
+      /unblacklist <triggers>*:* Remove triggers from the blacklist. Same newline logic applies here, so you can remove multiple triggers at once.
+      /blacklistmode <off/del/warn/ban/kick/mute/tban/tmute>*:* Action to perform when someone sends blacklisted words.
 
     Blacklist sticker is used to stop certain stickers. Whenever a sticker is sent, the message will be deleted immediately.
     *NOTE:* Blacklist stickers do not affect the group admin
-    ♡ /blsticker*:* See current blacklisted sticker
+      /blsticker*:* See current blacklisted sticker
     *Only admin:*
-    ♡ /addblsticker <sticker link>*:* Add the sticker trigger to the black list. Can be added via reply sticker
-    ♡ /unblsticker <sticker link>*:* Remove triggers from blacklist. The same newline logic applies here, so you can delete multiple triggers at once
-    ♡ /rmblsticker <sticker link>*:* Same as above
-    ♡ /blstickermode <delete/ban/tban/mute/tmute>*:* sets up a default action on what to do if users use blacklisted stickers
+      /addblsticker <sticker link>*:* Add the sticker trigger to the black list. Can be added via reply sticker
+      /unblsticker <sticker link>*:* Remove triggers from blacklist. The same newline logic applies here, so you can delete multiple triggers at once
+      /rmblsticker <sticker link>*:* Same as above
+      /blstickermode <delete/ban/tban/mute/tmute>*:* sets up a default action on what to do if users use blacklisted stickers
     Note:
-    ♡ <sticker link> can be `https://t.me/addstickers/<sticker>` or just `<sticker>` or reply to the sticker message
+      <sticker link> can be `https://t.me/addstickers/<sticker>` or just `<sticker>` or reply to the sticker message
 chatbot_help: |
     ──「 Chatbot AI 」──
 
     Shikimori Micchon AI is the only ai system which can detect & reply upto 200 language's
 
-    ♡ /chatbot [ON/OFF]: Enables and disables AI Chat mode.
-    ♡ /chatbot EN : Enables English only chatbot.
+      /chatbot [ON/OFF]: Enables and disables AI Chat mode.
+      /chatbot EN : Enables English only chatbot.
 cleaner_help: |
     ──「 Cleaner 」──
 
     Blue text cleaner removed any made up commands that people send in your chat.
 
-    ♡ /cleanblue <on/off/yes/no>*:* clean commands after sending
-    ♡ /ignoreblue <word>*:* prevent auto cleaning of the command
-    ♡ /unignoreblue <word>*:* remove prevent auto cleaning of the command
-    ♡ /listblue*:* list currently whitelisted commands
+      /cleanblue <on/off/yes/no>*:* clean commands after sending
+      /ignoreblue <word>*:* prevent auto cleaning of the command
+      /unignoreblue <word>*:* remove prevent auto cleaning of the command
+      /listblue*:* list currently whitelisted commands
 
     *Following are Disasters only commands, admins cannot use these:*
 
-    ♡ /gignoreblue <word>*:* globally ignorea bluetext cleaning of saved word across Saitama.
-    ♡ /ungignoreblue <word>*:* remove said command from global cleaning list
+      /gignoreblue <word>*:* globally ignorea bluetext cleaning of saved word across Saitama.
+      /ungignoreblue <word>*:* remove said command from global cleaning list
 connection_help: |
     ──「 Connection 」──
 
     Sometimes, you just want to add some notes and filters to a group chat, but you don't want everyone to see; This is where connections come in...
     This allows you to connect to a chat's database, and add things to it without the commands appearing in chat! For obvious reasons, you need to be an admin to add things; but any member in the group can view your data.
 
-    ♡ /connect: Connects to chat (Can be done in a group by /connect or /connect <chat id> in PM)
-    ♡ /connection: List connected chats
-    ♡ /disconnect: Disconnect from a chat
-    ♡ /helpconnect: List available commands that can be used remotely
+      /connect: Connects to chat (Can be done in a group by /connect or /connect <chat id> in PM)
+      /connection: List connected chats
+      /disconnect: Disconnect from a chat
+      /helpconnect: List available commands that can be used remotely
 
     *Admin only:*
 
-    ♡ /allowconnect <yes/no>: allow a user to connect to a chat
+      /allowconnect <yes/no>: allow a user to connect to a chat
 disabling_help: |
     ──「 Disabling 」──
 
-    ♡ /cmds*:* check the current status of disabled commands
+      /cmds*:* check the current status of disabled commands
 
     *Admins only:*
 
-    ♡ /enable <cmd name>*:* enable that command
-    ♡ /disable <cmd name>*:* disable that command
-    ♡ /enablemodule <module name>*:* enable all commands in that module
-    ♡ /disablemodule <module name>*:* disable all commands in that module
-    ♡ /listcmds*:* list all possible toggleable commands
+      /enable <cmd name>*:* enable that command
+      /disable <cmd name>*:* disable that command
+      /enablemodule <module name>*:* enable all commands in that module
+      /disablemodule <module name>*:* disable all commands in that module
+      /listcmds*:* list all possible toggleable commands
 extras_help: |
     ──「 Extras 」──
 
