--- a/SiestaRobot/language/en.yaml
+++ b/SiestaRobot/language/en.yaml
@@ -9,21 +9,18 @@ set_chat_lang: "Great, using {} Language it is from now on!"
 
 # PM Text
 pm_start_text: |
-  やあ Kon'nichiwa {} - San!
-  ✿ My Name Is Kaguya Shinomiya ✿
-  I can manage your group with useful & Advanced features , feel free to add me to your groups! ♡
+  やあ *Kon'nichiwa* {} *- San!*
+  ✿ *My Name Is Kaguya Shinomiya* ✿
+  *I can manage your group with useful & Advanced features , feel free to add me to your groups! ♡*
 
-  ◈ Version : `3.10.6`
-  ◈ Server Uptime : `{}`
-  ◈ `{}` Users , Across `{}` Chats.
+  ◈ *Version :* `3.10.6`
+  ◈ *Server Uptime :* `{}`
+  ◈ `{}` *Users* , *Across* `{}` *Chats.*
 
-  ➢ Try The Help Buttons Below To See The Commands Available After My Element Buff ××
-   
-pm_start_pic: |
-  "https://te.legra.ph/file/9abdbb8e7fa75e03a91ea.jpg"
+  ➢ *Try The Help Buttons Below To See The Commands Available After My Element Buff* ××
    
 group_start_text: |
-  やあ Kon'nichiwa Minna-San, Am Kaguya Shinomiya and I'll protect you from everything [✿](https://telegra.ph/file/a53d70bd26de174b8f1a2.mp4)
+  やあ Kon'nichiwa Baka! , Am Kaguya Shinomiya and I'll protect you from everything [✿](https://telegra.ph/file/a53d70bd26de174b8f1a2.mp4)
   
   Am Alive Since :- `{}`
 
